--- a/comounirse.html
+++ b/comounirse.html
@@ -49,6 +49,33 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
+        .cta {
+            margin-top: 30px;
+            padding: 20px;
+            text-align: center;
+            background: #f4f4f4;
+            border-radius: 10px;
+        }
+        .cta h2 {
+            color: #006A44;
+        }
+        .cta p {
+            margin-bottom: 15px;
+            font-size: 1.1em;
+        }
+        .cta a {
+            display: inline-block;
+            padding: 12px 20px;
+            background-color: #006A44;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-weight: bold;
+            transition: background-color 0.3s ease;
+        }
+        .cta a:hover {
+            background-color: #004a2d;
+        }
     </style>
 </head>
 <body>
@@ -98,11 +125,20 @@
     </form>
 </section>
 
+<!-- Nueva sección final -->
+<section class="cta">
+    <h2>¿Qué significa realmente unirse a Hernavia?</h2>
+    <p>Más allá de un formulario, unirse es compartir una identidad y una visión de comunidad.  
+       Pero… ¿qué implica ser hernaviano/a?</p>
+    <a href="identidad afrocolombianidad hernaviana.html">Descúbrelo aquí</a>
+</section>
+
 <footer>
     &copy; 2025 Hernavia - Proyecto Cultural
 </footer>
 
 </body>
 </html>
+
 
 
