--- a/comounirse.html
+++ b/comounirse.html
@@ -126,12 +126,13 @@
 </section>
 
 <!-- Nueva sección final -->
-<section class="cta">
+<section class="section">
     <h2>¿Qué significa realmente unirse a Hernavia?</h2>
     <p>Más allá de un formulario, unirse es compartir una identidad y una visión de comunidad.  
        Pero… ¿qué implica ser hernaviano/a?</p>
-    <a href="identidad afrocolombianidad hernaviana.html">Descúbrelo aquí</a>
+    <a href="identidad-afrocolombianidad-hernaviana.html">Descúbrelo aquí</a>
 </section>
+
 
 <footer>
     &copy; 2025 Hernavia - Proyecto Cultural
