--- a/comounirse.html
+++ b/comounirse.html
@@ -130,8 +130,26 @@
     <h2>¿Qué significa realmente unirse a Hernavia?</h2>
     <p>Más allá de un formulario, unirse es compartir una identidad y una visión de comunidad.  
        Pero… ¿qué implica ser hernaviano/a?</p>
-    <a href="identidad-afrocolombianidad-hernaviana.html">Descúbrelo aquí</a>
+    <a href="identidad-afrocolombianidad-hernaviana.html" class="btn-link">Descúbrelo aquí</a>
 </section>
+
+<style>
+/* Estilo para el enlace con aspecto de botón */
+.btn-link {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 12px 20px;
+    background-color: #006A44;
+    color: white;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+}
+.btn-link:hover {
+    background-color: #004a2d;
+}
+</style>
 
 
 <footer>
