--- a/comounirse.html
+++ b/comounirse.html
@@ -130,7 +130,7 @@
     <h2>¿Qué significa realmente unirse a Hernavia?</h2>
     <p>Más allá de un formulario, unirse es compartir una identidad y una visión de comunidad.  
        Pero… ¿qué implica ser hernaviano/a?</p>
-    <a href="identidad afrocolombianidad hernaviana.html" class="btn-link">Descúbrelo aquí</a>
+    <a href="identidad.html" class="btn-link">Descúbrelo aquí</a>
 </section>
 
 <style>
