--- a/identidad.html
+++ b/identidad.html
@@ -8,66 +8,7 @@
 
     <!-- Comentario SEO: esta página también se relaciona con 'afrocolombianidad hernaviana' -->
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f9f9f9;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-        header {
-            background: #006A44;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .section {
-            max-width: 900px;
-            margin: 30px auto;
-            padding: 25px;
-            background: white;
-            border-left: 8px solid #006A44;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        }
-        h2 {
-            color: #006A44;
-            margin-top: 0;
-            position: relative;
-            padding-bottom: 8px;
-        }
-        h2::after {
-            content: "";
-            display: block;
-            width: 60px;
-            height: 4px;
-            background: #FFD700; /* Amarillo */
-            margin-top: 6px;
-            border-radius: 2px;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #f1f1f1;
-            margin-top: 40px;
-            font-size: 0.9em;
-            color: #555;
-        }
-        a.volver {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 12px 20px;
-            background-color: #006A44;
-            color: white;
-            text-decoration: none;
-            border-radius: 6px;
-            font-weight: bold;
-        }
-        a.volver:hover {
-            background-color: #004a2d;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css"> <!-- tu CSS global -->
 </head>
 <body>
 
@@ -85,13 +26,13 @@
         });
 </script>
 
-<section class="section">
+<section>
     <h2>¿Qué significa unirse?</h2>
-    <p>Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
+    <p class="texto-largo">Unirse a Hernavia no es solo llenar un formulario o recibir un número simbólico.  
        Es compartir una visión, una forma de entender la comunidad y asumir la identidad hernaviana como una manera de vivir con orgullo, unión y compromiso.</p>
 </section>
 
-<section class="section">
+<section>
     <h2>Principios de la Identidad Hernaviana</h2>
     <ul>
         <li><strong>Paz hernaviana:</strong> Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
@@ -100,17 +41,17 @@
     </ul>
 </section>
 
-<section class="section">
+<section>
     <h2>Más que un símbolo</h2>
-    <p>La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos:  
+    <p class="texto-largo">La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos:  
        son colores para enorgullecerse, para gritar y para seguir.  
        Imagina un partido deportivo con la comunidad apoyando los colores hernavianos.  
        ¿Te emociona esa idea o piensas en otra manera de vivir la identidad hernaviana?</p>
 </section>
 
-<section class="section">
+<section>
     <h2>La esencia hernaviana</h2>
-    <p>La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
+    <p class="texto-largo">La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
        el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
        la verdad, el respeto mutuo y la seguridad de salir a la calle sin miedo.  
        Todo eso y más hace parte de ser hernaviano.</p>
@@ -119,9 +60,11 @@
 <!-- Imagen con alt oculto para SEO -->
 <img src="https://i.postimg.cc/vmP589KJ/Flag-Creator-4.png" alt="Identidad cultural relacionada con afrocolombianidad hernaviana" style="display:none;">
 
-<section class="section">
-    <p>Si quieres ver más de nuestros símbolos puedes visitar la sección <a href="simbolos.html">Símbolos</a>,  
-       o revisar <a href="documentos.html">Documentos</a> para conocer mejor lo que significa ser hernaviano. ¡Gracias por unirte a esta visión!</p>
+<section>
+    <h2>Explora más</h2>
+    <p class="texto-largo">Si quieres conocer más de nuestros símbolos y documentos oficiales, puedes seguir explorando:</p>
+    <a href="simbolos.html" class="boton-hernavia">Ver símbolos</a>
+    <a href="documentos.html" class="boton-hernavia">Ver documentos</a>
 </section>
 
 <footer>
