--- a/identidad.html
+++ b/identidad.html
@@ -8,7 +8,7 @@
 
     <!-- Comentario SEO: esta página también se relaciona con 'afrocolombianidad hernaviana' -->
 
-    <link rel="stylesheet" href="estilos.css"> <!-- tu CSS global -->
+    <link rel="stylesheet" href="estilo.css"> <!-- tu CSS global -->
 </head>
 <body>
 
