--- a/identidad.html
+++ b/identidad.html
@@ -35,25 +35,25 @@
 <section>
     <h2>Principios de la Identidad Hernaviana</h2>
     <ul>
-        <li><strong>Paz hernaviana:</strong> Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
-        <li><strong>Innovación hernaviana:</strong> Crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
-        <li><strong>Respeto hernaviano por la naturaleza:</strong> Cuidar lo que nos rodea como parte esencial del entorno. Si piensas “¿qué hace un solo papel?”, recuerda que 8 mil millones de personas pueden pensar lo mismo.</li>
+        <li>Paz hernaviana: Construir desde la armonía, la cohesión, la verdad y la fraternidad.</li>
+        <li>Innovación hernaviana: Crear nuevas formas de unión y expresión; no quedarse en los métodos clásicos, sino buscar caminos que beneficien a todos.</li>
+        <li>Respeto hernaviano por la naturaleza: Cuidar lo que nos rodea como parte esencial del entorno. Si piensas “¿qué hace un solo papel?”, recuerda que 8 mil millones de personas pueden pensar lo mismo.</li>
     </ul>
 </section>
 
 <section>
     <h2>Más que un símbolo</h2>
-    <p class="texto-largo">La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos:  
+    <p class="texto-largo">La bandera hernaviana y un futuro símbolo sorpresa no son simples dibujos 
        son colores para enorgullecerse, para gritar y para seguir.  
-       Imagina un partido deportivo con la comunidad apoyando los colores hernavianos.  
-       ¿Te emociona esa idea o piensas en otra manera de vivir la identidad hernaviana?</p>
+       Imagina un partido de futbol donde grites por hernavia y sus colores  
+       ¿Te emociona esa idea o tienes otra en mente?</p>
 </section>
 
 <section>
     <h2>La esencia hernaviana</h2>
     <p class="texto-largo">La identidad hernaviana representa los valores que hoy en día parecen olvidados:  
        el respeto al medio ambiente, la protección de la fauna y la flora, la paz, la unión de la comunidad,  
-       la verdad, el respeto mutuo y la seguridad de salir a la calle sin miedo.  
+       la verdad, el respeto mutuo o hasta el poder salir a la calle sin miedo todos estos siempre se escuchan pero nunca se ven avances reales en ellos asi que nosotros tomaremos la batuta y hacer lo que nadie mas aunque no se puede lograr sin ti asi que si quieres que las cosas cambien camba tu tambien  
        Todo eso y más hace parte de ser hernaviano.</p>
 </section>
 
@@ -62,9 +62,8 @@
 
 <section>
     <h2>Explora más</h2>
-    <p class="texto-largo">Si quieres conocer más de nuestros símbolos y documentos oficiales, puedes seguir explorando:</p>
-    <a href="simbolos.html" class="boton-hernavia">Ver símbolos</a>
-    <a href="documentos.html" class="boton-hernavia">Ver documentos</a>
+    <p class="texto-largo">Si quieres conocer más puedes mirar la seccion de simbolos o de documentos gracias por leer y apoyar :)</p>
+   
 </section>
 
 <footer>
