--- a/identidad.html
+++ b/identidad.html
@@ -9,6 +9,14 @@
     <!-- Comentario SEO: esta página también se relaciona con 'afrocolombianidad hernaviana' -->
 
     <link rel="stylesheet" href="estilo.css"> <!-- tu CSS global -->
+
+    <!-- Ajuste de espaciado solo para esta página -->
+    <style>
+        .texto-largo, section p, section li {
+            margin-bottom: 1.5em; /* puedes subir a 2em si quieres más aire */
+            line-height: 1.7;     /* ajusta la altura de línea */
+        }
+    </style>
 </head>
 <body>
 
@@ -63,7 +71,6 @@
 <section>
     <h2>Explora más</h2>
     <p class="texto-largo">Si quieres conocer más puedes mirar la seccion de simbolos o de documentos gracias por leer y apoyar :)</p>
-   
 </section>
 
 <footer>
