--- a/identidad.html
+++ b/identidad.html
@@ -3,6 +3,7 @@
 <head>
     <title>Identidad Hernaviana</title>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="favicono.png">
     <meta name="description" content="Explora la Identidad Hernaviana, sus valores, símbolos y principios culturales. Relacionado con la afrocolombianidad hernaviana como concepto cultural.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
