--- a/head.html
+++ b/head.html
@@ -1,5 +1,10 @@
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" href="favicono.png">
-<link rel="stylesheet" href="estilo.css">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" href="favicono.png">
+  <link rel="stylesheet" href="estilo.css">
+
+  <title>Hernavia</title>
+  <link rel="canonical" href="https://hernavia.github.io/Hernavia/">
+</head>
 
