--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ fetch('nav.html')
 
     <section id="que-es">
         <h2>¿Qué es Hernavia?</h2>
-        <p>Hernavia es un proyecto que busca dar identidad hernaviana a la gente y acompañarla activamente en este propósito. Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales. Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora. En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
+        <p>Hernavia es un proyecto que busca fortalezer la identidad hernaviana y acompañar a las personas activamente en este propósito. Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además, Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales. Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora. En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
     </section>
 
     <section id="donde">
@@ -58,6 +58,7 @@ fetch('nav.html')
 
 </body>
 </html>
+
 
 
 
