--- a/nav.html
+++ b/nav.html
@@ -1,5 +1,5 @@
 <nav class="nav-comun">
-    <a href="index.html">Inicio</a>
+    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
     <a href="Documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="proyectos.html">Proyectos</a>
