--- a/nav.html
+++ b/nav.html
@@ -6,4 +6,6 @@
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
+     <a href="noticias random.html">noticias random</a>
+    noticias random
 </nav>
