--- a/nav.html
+++ b/nav.html
@@ -6,5 +6,5 @@
     <a href="simbolos.html">Símbolos</a>
     <a href="comounirse.html">¿Cómo unirse?</a>
     <a href="sugerencias.html">Sugerencias</a>
-     <a href="noticias random.html">noticias random</a>
+    <a href="noticias random">noticias random</a>
 </nav>
