--- a/noticias-random.html
+++ b/noticias-random.html
@@ -37,7 +37,7 @@
 
 <section id="noticias-mundo">
     <h2>Noticias del mundo</h2>
-    <p>Solo noticias de Trump.</p>
+    <p>Hoy no hay nada interesante.</p>
 </section>
 
 </body>
