--- a/sugerencias.html
+++ b/sugerencias.html
@@ -58,7 +58,7 @@ fetch('nav.html')
 </script>
 
     <section class="section">
-        <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia, por favor envíanos un mensaje:</p>
+        <p>Si encuentras errores, tienes sugerencias o ideas para mejorar Hernavia, por favor no dudes en envíarnos un mensaje, ¿puedes cambiar el futuro:?</p>
 
         <form action="https://formspree.io/f/xldpgjop" method="POST">
             <label for="nombre">Nombre (opcional):</label>
