--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ fetch('nav.html')
 
     <section id="que-es">
         <h2>¿Qué es Hernavia?</h2>
-        <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad y tu puedes ayudar a cambiar la historia.
-        Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además,   Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales. 
-        Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora.
-        En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
+        <p>Más que un proyecto, Hernavia es un espacio donde la creatividad y la unión se convierten en identidad y tu puedes ayudar a cambiar la historia.</p>
+        <p>Se fundamenta en los principios del respeto y cuidado por la naturaleza, la protección de los animales, el reciclaje, la recolección de basura, el cuidado del agua y la promoción de fines ambientales. Además,   Hernavia impulsa la innovación, apoyando nuevos proyectos y fomentando un espíritu creativo en la sociedad para encontrar soluciones reales a los retos actuales.</p> 
+        <p>Al mismo tiempo, promueve la unión y el bienestar de la comunidad, buscando que cada persona se sienta segura y parte de un entorno que la valora.</p>
+        <p>En resumen, la identidad hernaviana se sostiene sobre la naturaleza, la paz y la innovación.</p>
     </section>
 
     <section id="donde">
@@ -61,6 +61,7 @@ fetch('nav.html')
 
 </body>
 </html>
+
 
 
 
