--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Hernavia</title>
-    <div id="head-placeholder"></div>
-    <script>
-        fetch('head.html')
-            .then(response => response.text())
-            .then(data => {
-                document.head.innerHTML += data;
-            });
-    </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hernavia – Nación Simbólica y Comunidad</title>
+    <meta name="description" content="Descubre Hernavia, la micronación colombiana donde creatividad, comunidad y cultura se unen para un futuro sostenible.">
+    <link rel="icon" type="image/png" href="favicono.png">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
@@ -18,15 +15,29 @@
         <h1>Hernavia</h1>
     </header>
 
-<div id="nav-placeholder"></div>
+    <!-- Navegación principal cargada por JS -->
+    <div id="nav-placeholder"></div>
 
-<script>
-fetch('nav.html')
-.then(response => response.text())
-.then(data => {
-    document.getElementById('nav-placeholder').innerHTML = data;
-});
-</script>
+    <noscript>
+        <nav class="nav-comun">
+            <a href="index.html">Inicio</a>
+            <a href="Documentos.html">Documentos</a>
+            <a href="noticias.html">Noticias</a>
+            <a href="proyectos.html">Proyectos</a>
+            <a href="simbolos.html">Símbolos</a>
+            <a href="comounirse.html">¿Cómo unirse?</a>
+            <a href="sugerencias.html">Sugerencias</a>
+            <a href="noticias-random.html">Noticias Random</a>
+        </nav>
+    </noscript>
+
+    <script>
+        fetch('nav.html')
+        .then(response => response.text())
+        .then(data => {
+            document.getElementById('nav-placeholder').innerHTML = data;
+        });
+    </script>
 
     <section id="que-es">
         <h2>¿Qué es Hernavia?</h2>
@@ -61,12 +72,3 @@ fetch('nav.html')
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
