--- a/nav.html
+++ b/nav.html
@@ -1,10 +1,14 @@
-<nav class="nav-comun">
-    <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="Documentos.html">Documentos</a>
-    <a href="noticias.html">Noticias</a>
-    <a href="proyectos.html">Proyectos</a>
-    <a href="simbolos.html">Símbolos</a>
-    <a href="comounirse.html">¿Cómo unirse?</a>
-    <a href="sugerencias.html">Sugerencias</a>
-    <a href="noticias-random.html">Noticias Random</a>
-</nav>
+<div id="nav-placeholder"></div>
+
+<noscript>
+  <nav class="nav-comun">
+      <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+      <a href="Documentos.html">Documentos</a>
+      <a href="noticias.html">Noticias</a>
+      <a href="proyectos.html">Proyectos</a>
+      <a href="simbolos.html">Símbolos</a>
+      <a href="comounirse.html">¿Cómo unirse?</a>
+      <a href="sugerencias.html">Sugerencias</a>
+      <a href="noticias-random.html">Noticias Random</a>
+  </nav>
+</noscript>
