--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,16 @@
 <div id="nav-placeholder"></div>
 
+<script>
+fetch('nav.html')
+.then(response => response.text())
+.then(data => {
+    document.getElementById('nav-placeholder').innerHTML = data;
+});
+</script>
+
+<noscript>
   <nav class="nav-comun">
-      <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
+      <a href="index.html">Inicio</a>
       <a href="Documentos.html">Documentos</a>
       <a href="noticias.html">Noticias</a>
       <a href="proyectos.html">Proyectos</a>
@@ -10,3 +19,4 @@
       <a href="sugerencias.html">Sugerencias</a>
       <a href="noticias-random.html">Noticias Random</a>
   </nav>
+</noscript>
