--- a/nav.html
+++ b/nav.html
@@ -1,6 +1,6 @@
 <nav class="nav-comun">
     <a href="https://hernavia.github.io/Hernavia/">Inicio</a>
-    <a href="Documentos.html">Documentos</a>
+    <a href="documentos.html">Documentos</a>
     <a href="noticias.html">Noticias</a>
     <a href="proyectos.html">Proyectos</a>
     <a href="simbolos.html">Símbolos</a>
