--- a/documentos.html
+++ b/documentos.html
@@ -70,7 +70,7 @@ fetch('nav.html')
             y asegurar la cohesión de Hernavia. Son flexibles y sujetas a interpretación por el Arconte, 
             siempre respetando los principios de respeto, paz, innovación y unión.
         </p>
-        <a href="Leyes.html" class="boton">Leer las leyes completas</a>
+        <a href="leyes.html" class="boton">Leer las leyes completas</a>
     </section>
 
     <footer>
