--- a/noticias.html
+++ b/noticias.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <meta charset="UTF-8">
     <title>Noticias - Hernavia</title>
     <script>
         fetch('head.html')
@@ -21,7 +22,7 @@
 
 <body>
     <header>
-        <h1>Noticias</h1>
+        <h1>Noticias de Hernavia</h1>
     </header>
 
     <div id="nav-placeholder"></div>
@@ -33,13 +34,14 @@
             });
     </script>
 
-    <section>
-        <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
-    </section>
+    <main>
+        <section>
+            <div class="ups">Ups… este apartado no tiene información por ahora, espera a que se actualice.</div>
+        </section>
+    </main>
 
     <footer>
         &copy; 2025 Hernavia - Proyecto Cultural
     </footer>
 </body>
 </html>
-
